--- a/static/css/style.css
+++ b/static/css/style.css
@@ -24,6 +24,10 @@ h1 {
     font-size: 50px;
 }
 
+a {
+  color: white;
+}
+
 td {
     text-align: center;
 }
@@ -94,10 +98,11 @@ td {
 }
 
 .barra_superior {
-  background-color: black;
+  background-color: rgb(40, 35, 35);
   color: white;
-  padding: 20px;
+  padding: 10px;
   text-align: center;
+  border-radius: 20px;
 }
 
 .titulo-seccion p {
@@ -186,6 +191,114 @@ td {
 }
 
 .text_login {
-  font-size: small;
+  font-size: medium;
   text-align: left;
+}
+
+.boton-login {
+  font-size: large;
+  size: 150%;
+  background-color: black;
+  color: white;
+  border-color: white;
+  border-width: 1px;
+  margin-right: 16px;
+  margin-left: 2px;
+}
+
+.boton-comentarios {
+  font-size: large;
+  size: 150%;
+  background-color: black;
+  color: white;
+  border-color: white;
+}
+
+#trivia-container {
+  max-width: 800px;
+  margin: auto;
+  background-color: #2a2a2a;
+  border: 2px solid #555;
+  border-radius: 10px;
+  padding: 30px;
+  box-shadow: 0 0 10px #000;
+}
+
+p {
+  margin: 10px 0;
+}
+
+label {
+  display: block;
+  margin-left: 15px;
+  cursor: pointer;
+}
+
+input[type="radio"] {
+  margin-right: 8px;
+}
+
+button {
+  display: block;
+  margin: 30px auto;
+  padding: 12px 25px;
+  font-size: 16px;
+  background-color: #444;
+  color: white;
+  border: 1px solid #666;
+  border-radius: 5px;
+  cursor: pointer;
+  transition: 0.3s;
+}
+
+button:hover {
+  background-color: #666;
+}
+
+#result {
+  max-width: 800px;
+  margin: 30px auto;
+  padding: 20px;
+  background-color: #222;
+  border-left: 5px solid #888;
+  border-radius: 5px;
+}
+
+.correcta {
+  color: lightgreen;
+}
+
+.incorrecta {
+  color: red;
+}
+
+.no-contestada {
+  color: orange;
+}
+
+
+
+#trivia-container div {
+background-color: rgba(0,0,0,0.85);
+padding: 20px;
+border-radius: 10px;
+border: 2px solid #444;
+margin-bottom: 25px;
+box-shadow: 0 0 10px #000;
+transition: transform 0.2s ease-in-out;
+}
+
+#trivia-container div:hover {
+transform: scale(1.02);
+}
+
+#trivia-container p {
+font-weight: bold;
+color: #ffcc00;
+}
+
+label {
+display: block;
+margin: 5px 0;
+padding-left: 15px;
 }
